salesforce-main/src/main/default/objects/Contact/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender same as gender at birth?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01~ Yes</fullName>
            </value>
            <value>
                <fullName>02~ No</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>