salesforce-main/src/main/default/objects/Contact/fields/Generate_Student_ID_in_SIS__c.field-meta.xml
<CustomField>
    <fullName>Generate_Student_ID_in_SIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Student ID in SIS</label>
    <type>Checkbox</type>
</CustomField>