salesforce-main/src/main/default/objects/Contact/fields/Give_send_application_procedures_link__c.field-meta.xml
<CustomField>
    <fullName>Give_send_application_procedures_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Give/send application procedures/ link</label>
    <type>Checkbox</type>
</CustomField>