salesforce-main/src/main/default/objects/Contact/fields/GMAT_Result__c.field-meta.xml
<CustomField>
    <fullName>GMAT_Result__c</fullName>
    <description>Graduate Management Admissions Test (GMAT) Results</description>
    <inlineHelpText>Graduate Management Admissions Test (GMAT) Results</inlineHelpText>
    <label>GMAT Result</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>