salesforce-main/src/main/default/objects/Contact/fields/GRE_Analytical_Result__c.field-meta.xml
<CustomField>
    <fullName>GRE_Analytical_Result__c</fullName>
    <description>Graduate Records Examination (GRE) Analytical Score Result</description>
    <label>GRE Analytical Result</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>