salesforce-main/src/main/default/objects/Contact/fields/GRE_Quantitative_Result__c.field-meta.xml
<CustomField>
    <fullName>GRE_Quantitative_Result__c</fullName>
    <description>Graduate Records Examination (GRE) Quantitative Score Result</description>
    <label>GRE Quantitative Result</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>