salesforce-main/src/main/default/objects/Contact/fields/GRE_Verbal_Result__c.field-meta.xml
<CustomField>
    <fullName>GRE_Verbal_Result__c</fullName>
    <description>Graduate Records Examination (GRE) Verbal Score Result</description>
    <label>GRE Verbal Result</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>