salesforce-main/src/main/default/objects/Contact/fields/Hashed_Email__c.field-meta.xml
<CustomField>
    <fullName>Hashed_Email__c</fullName>
    <description>Identifier for interactions across Marketing Cloud systems</description>
    <label>Hashed Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>