salesforce-main/src/main/default/objects/Contact/fields/Highest_Qualification_Code__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification_Code__c</fullName>
    <description>Highest Qualification Code</description>
    <label>Highest Qualification Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>