salesforce-main/src/main/default/objects/Contact/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>DO NOT USE.  This field was originally added to translate home phone from lead, but is no longer in use as the lead object was not implemented.  Validation and page display shows the standard home phone field.  Prior to removal:
1) Validate no data exists in this field.
2) Validate field removal does not have negative impact on data team interfaces.</description>
    <label>[REMOVE] Home Phone</label>
    <type>Phone</type>
</CustomField>