salesforce-main/src/main/default/objects/Contact/fields/Inn_of_Court__c.field-meta.xml
<CustomField>
    <fullName>Inn_of_Court__c</fullName>
    <description>Indicates Inn of Courts (professional association) student may be affiliated with.</description>
    <label>Inn of Court</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lincoln&apos;s Inn</fullName>
            </value>
            <value>
                <fullName>Inner Temple</fullName>
            </value>
            <value>
                <fullName>Middle Temple</fullName>
            </value>
            <value>
                <fullName>Gray&apos;s Inn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>