salesforce-main/src/main/default/objects/Contact/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <label>Intake</label>
    <type>Date</type>
</CustomField>