salesforce-main/src/main/default/objects/Contact/fields/Job_Roles__c.field-meta.xml
<CustomField>
    <fullName>Job_Roles__c</fullName>
    <label>Job Roles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting &amp; Audit</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Business &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Company Commercial</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Credit Analysis</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Derivatives &amp; Trading</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Essential Law for Accountants</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Financial Analysis</fullName>
            </value>
            <value>
                <fullName>Financial Modelling</fullName>
            </value>
            <value>
                <fullName>Financial Reporting</fullName>
            </value>
            <value>
                <fullName>For Lawyers</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>General Introductory Courses</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Interpersonal Skills</fullName>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Law for Other Professionals</fullName>
            </value>
            <value>
                <fullName>Leadership &amp; Management</fullName>
            </value>
            <value>
                <fullName>Personal Effectiveness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>