salesforce-main/src/main/default/objects/Contact/fields/Job_Specialism__c.field-meta.xml
<CustomField>
    <fullName>Job_Specialism__c</fullName>
    <label>Job Specialism</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Job_Roles__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Acquisitions &amp; Disposals</fullName>
            </value>
            <value>
                <fullName>ADR</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Agency &amp; Distribution Agreements</fullName>
            </value>
            <value>
                <fullName>Bribery &amp; Corruption</fullName>
            </value>
            <value>
                <fullName>Business Immigration</fullName>
            </value>
            <value>
                <fullName>Business Skills</fullName>
            </value>
            <value>
                <fullName>Children - Private</fullName>
            </value>
            <value>
                <fullName>Children - Public</fullName>
            </value>
            <value>
                <fullName>Civil Advocacy</fullName>
            </value>
            <value>
                <fullName>Civil Procedure</fullName>
            </value>
            <value>
                <fullName>Clinical Negligence</fullName>
            </value>
            <value>
                <fullName>Code of Conduct</fullName>
            </value>
            <value>
                <fullName>Commercial Finance</fullName>
            </value>
            <value>
                <fullName>Commercial Litigation</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Company Law</fullName>
            </value>
            <value>
                <fullName>Compromise Agreements</fullName>
            </value>
            <value>
                <fullName>Conflict of Laws</fullName>
            </value>
            <value>
                <fullName>Consumer Law</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Conveyancing</fullName>
            </value>
            <value>
                <fullName>Copyright</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Governance</fullName>
            </value>
            <value>
                <fullName>Costs</fullName>
            </value>
            <value>
                <fullName>Court of Protection</fullName>
            </value>
            <value>
                <fullName>Criminal Advocacy</fullName>
            </value>
            <value>
                <fullName>Data Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>