salesforce-main/src/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Profession__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accounting Technician</fullName>
            </value>
            <value>
                <fullName>Accounts Director</fullName>
            </value>
            <value>
                <fullName>Accounts Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Barrister</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Business Planning Manager</fullName>
            </value>
            <value>
                <fullName>Buyside Analyst</fullName>
            </value>
            <value>
                <fullName>Case Worker</fullName>
            </value>
            <value>
                <fullName>Cash Manager</fullName>
            </value>
            <value>
                <fullName>Cashiers</fullName>
            </value>
            <value>
                <fullName>Chief Executive</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Client Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Compliance Analyst</fullName>
            </value>
            <value>
                <fullName>Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Compliance Officer/ Head/ Executive</fullName>
            </value>
            <value>
                <fullName>Compliance Reporting</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Corporate Accountant</fullName>
            </value>
            <value>
                <fullName>Corporate Actions</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Finance Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>