salesforce-main/src/main/default/objects/Contact/fields/Job_Type_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Graduation__c</fullName>
    <description>What type of job or work does this student planning on after course completion?</description>
    <inlineHelpText>What type of job or work does this student planning on after course completion?</inlineHelpText>
    <label>Job Type Graduation</label>
    <type>TextArea</type>
</CustomField>