salesforce-main/src/main/default/objects/Contact/fields/Language_Skills__c.field-meta.xml
<CustomField>
    <fullName>Language_Skills__c</fullName>
    <label>Language Skills</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>