salesforce-main/src/main/default/objects/Contact/fields/Language_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Language_Test_Score__c</fullName>
    <description>Score achieved by student on language test</description>
    <label>Language Test Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>