salesforce-main/src/main/default/objects/Contact/fields/Language_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Language_Test_Type__c</fullName>
    <description>Type of language test this student has taken</description>
    <label>English Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IELTS</fullName>
            </value>
            <value>
                <fullName>BPP ELT</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>PTE</fullName>
            </value>
            <value>
                <fullName>GCSE/GCE</fullName>
            </value>
            <value>
                <fullName>HSSC ELT Waiver</fullName>
            </value>
            <value>
                <fullName>Previous Sponsorship</fullName>
            </value>
            <value>
                <fullName>UK Qualification</fullName>
            </value>
            <value>
                <fullName>Qualification/Nationals from Majority English speaking Country</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Oxford ELT Test</fullName>
            </value>
            <value>
                <fullName>Language Cert</fullName>
            </value>
            <value>
                <fullName>MOI</fullName>
            </value>
            <value>
                <fullName>English Test Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>