salesforce-main/src/main/default/objects/Contact/fields/Listening_Language_Score__c.field-meta.xml
<CustomField>
    <fullName>Listening_Language_Score__c</fullName>
    <description>Records the English language test score for listening</description>
    <label>Listening Score</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Language_Test_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>English_Language_Test_Scores</valueSetName>
    </valueSet>
</CustomField>