salesforce-main/src/main/default/objects/Contact/fields/Marketing_Preference_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preference_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Preference (Opt-Out)</label>
    <type>Checkbox</type>
</CustomField>