salesforce-main/src/main/default/objects/Contact/fields/MC_GUID__c.field-meta.xml
<CustomField>
    <fullName>MC_GUID__c</fullName>
    <description>Tracking field to be populated by Marketing Cloud</description>
    <label>MC GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>