salesforce-main/src/main/default/objects/Contact/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Student&apos;s middle name.</description>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>