salesforce-main/src/main/default/objects/Contact/fields/Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses__c</fullName>
    <description>Monthly expenses of the student</description>
    <label>Monthly Expenses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>