salesforce-main/src/main/default/objects/Contact/fields/Mother_s_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Occupation__c</fullName>
    <description>Student&apos;s mother&apos;s occupation</description>
    <label>Mother&apos;s Occupation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>