salesforce-main/src/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Primary nationality of student.</description>
    <label>Old Primary Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>