salesforce-main/src/main/default/objects/Contact/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>NI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>