salesforce-main/src/main/default/objects/Contact/fields/No_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>No_3rd_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BD field. Opt out of 3rd party communication.

Not displayed on student pages as of May 11,11.</description>
    <label>No 3rd Party</label>
    <type>Checkbox</type>
</CustomField>