salesforce-main/src/main/default/objects/Contact/fields/No_Mail_Hardcopy__c.field-meta.xml
<CustomField>
    <fullName>No_Mail_Hardcopy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originally BD field, but used on student pages as well.  Indicates opt out of hard copy mailings.</description>
    <label>No Mail (Hardcopy)</label>
    <type>Checkbox</type>
</CustomField>