salesforce-main/src/main/default/objects/Contact/fields/No_Phone__c.field-meta.xml
<CustomField>
    <fullName>No_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originally BD field, but used for student pages as well.  Indicates a phone opt out.</description>
    <label>No Phone</label>
    <type>Checkbox</type>
</CustomField>