salesforce-main/src/main/default/objects/Contact/fields/No_SMS__c.field-meta.xml
<CustomField>
    <fullName>No_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originally a BD field but added to student pages as well.  Indicates an SMS opt out.</description>
    <label>No SMS</label>
    <type>Checkbox</type>
</CustomField>