salesforce-main/src/main/default/objects/Contact/fields/Offer_extended__c.field-meta.xml
<CustomField>
    <fullName>Offer_extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer extended</label>
    <type>Checkbox</type>
</CustomField>