salesforce-main/src/main/default/objects/Contact/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <description>Other email address of student.  As preferred email address is required when adding an email address,  this field can be used when  the email address type is unknown.</description>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>