salesforce-main/src/main/default/objects/Contact/fields/Overall_Language_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Language_Score__c</fullName>
    <description>Records the overall English language test score</description>
    <label>Overall Score</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Language_Test_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>English_Language_Test_Scores</valueSetName>
    </valueSet>
</CustomField>