salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Email__c</fullName>
    <description>Student&apos;s parent or guardian&apos;s Email</description>
    <label>Parent/Guardian Email</label>
    <type>Email</type>
</CustomField>