salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_First_Name__c</fullName>
    <description>Student&apos;s parent or guardian&apos;s first name</description>
    <label>Parent/Guardian First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>