salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Last_Name__c</fullName>
    <description>Student&apos;s parent or guardian&apos;s last name</description>
    <label>Parent/Guardian Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>