salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Mobile__c</fullName>
    <description>The mobile number of the students designated parent or guardian</description>
    <label>Parents/Guardian Mobile</label>
    <type>Phone</type>
</CustomField>