salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Occupation__c</fullName>
    <label>Parent/Guardian Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0000~ Not stated</fullName>
            </value>
            <value>
                <fullName>0001~ Information refused</fullName>
            </value>
            <value>
                <fullName>0007~ Retired</fullName>
            </value>
            <value>
                <fullName>0008~ Unemployed</fullName>
            </value>
            <value>
                <fullName>0009~ Not known</fullName>
            </value>
            <value>
                <fullName>1111~ Senior officials in national government</fullName>
            </value>
            <value>
                <fullName>1112~ Directors &amp; chief executives of major organisations</fullName>
            </value>
            <value>
                <fullName>1113~ Senior officials in local government</fullName>
            </value>
            <value>
                <fullName>1114~ Senior officials of special interest organisations</fullName>
            </value>
            <value>
                <fullName>1121~ Production, works &amp; maintenance managers</fullName>
            </value>
            <value>
                <fullName>1122~ Managers in construction</fullName>
            </value>
            <value>
                <fullName>1123~ Managers in mining &amp; energy</fullName>
            </value>
            <value>
                <fullName>1131~ Financial managers &amp; chartered secretaries</fullName>
            </value>
            <value>
                <fullName>1132~ Marketing &amp; sales managers</fullName>
            </value>
            <value>
                <fullName>1133~ Purchasing managers</fullName>
            </value>
            <value>
                <fullName>1134~ Advertising &amp; public relations managers</fullName>
            </value>
            <value>
                <fullName>1135~ Personnel, training &amp; industrial relations managers</fullName>
            </value>
            <value>
                <fullName>1136~ Information &amp; communication technology managers</fullName>
            </value>
            <value>
                <fullName>1137~ Research &amp; development managers</fullName>
            </value>
            <value>
                <fullName>1141~ Quality assurance managers</fullName>
            </value>
            <value>
                <fullName>1142~ Customer care managers</fullName>
            </value>
            <value>
                <fullName>1151~ Financial institution managers</fullName>
            </value>
            <value>
                <fullName>1152~ Office managers</fullName>
            </value>
            <value>
                <fullName>1161~ Transport &amp; distribution managers</fullName>
            </value>
            <value>
                <fullName>1162~ Storage &amp; warehouse managers</fullName>
            </value>
            <value>
                <fullName>1163~ Retail &amp; wholesale managers</fullName>
            </value>
            <value>
                <fullName>1171~ Officers in armed forces</fullName>
            </value>
            <value>
                <fullName>1172~ Police officers (inspectors &amp; above)</fullName>
            </value>
            <value>
                <fullName>1173~ Senior officers in fire, ambulance, prison &amp; related services</fullName>
            </value>
            <value>
                <fullName>1174~ Security managers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>