salesforce-main/src/main/default/objects/Contact/fields/Parent_Guardian_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Relationship__c</fullName>
    <description>Student&apos;s relationship to their parent or guardian.</description>
    <inlineHelpText>Student&apos;s relationship to their parent or guardian.</inlineHelpText>
    <label>Parent/Guardian Relationship</label>
    <length>40</length>
    <type>Text</type>
</CustomField>