salesforce-main/src/main/default/objects/Contact/fields/Passport_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Exp_Date__c</fullName>
    <description>Date of passport expiration.</description>
    <label>Passport Exp Date</label>
    <type>Date</type>
</CustomField>