salesforce-main/src/main/default/objects/Contact/fields/Passport_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date__c</fullName>
    <description>Date of passport issue.</description>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>