salesforce-main/src/main/default/objects/Contact/fields/Passport_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Passport_Place_of_Issue__c</fullName>
    <label>Passport Place of Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>