salesforce-main/src/main/default/objects/Contact/fields/PE_assessment_completed__c.field-meta.xml
<CustomField>
    <fullName>PE_assessment_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE assessment completed</label>
    <type>Checkbox</type>
</CustomField>