salesforce-main/src/main/default/objects/Contact/fields/PE_assessment_FU_meeting_completion__c.field-meta.xml
<CustomField>
    <fullName>PE_assessment_FU_meeting_completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE assessment FU meeting completion</label>
    <type>Checkbox</type>
</CustomField>