salesforce-main/src/main/default/objects/Contact/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <description>Personal email address of student.</description>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>