salesforce-main/src/main/default/objects/Contact/fields/Personal_Information__c.field-meta.xml
<CustomField>
    <fullName>Personal_Information__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Personal Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>