salesforce-main/src/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Owner/CEO</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Student Counsellor</fullName>
            </value>
            <value>
                <fullName>USA Counsellor</fullName>
            </value>
            <value>
                <fullName>UK Counsellor</fullName>
            </value>
            <value>
                <fullName>Finance Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>