salesforce-main/src/main/default/objects/Contact/fields/Post_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Post_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre</description>
    <label>Post Opt In</label>
    <type>Checkbox</type>
</CustomField>